tailwind css for js

--- a/size.html
+++ b/size.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>size</title>
+  
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -60,6 +61,58 @@ vw
 </div>
 
 <h1>HEIGHT</h1>
+<div class="flex items-end mt-20 mb-10">
+    <div class="bg-indigo-400 ml-5 h-0 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-[20px] pl-2">Hi world what is happening right now. Did you code today? </div>
+    <div class="bg-indigo-400 ml-5 h-4 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-8 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-16 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-24 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-28 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-32 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-64 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-80 pl-2">Code now! </div>
+    <div class="bg-indigo-400 ml-5 h-96 pl-2">Code now! </div>
+</div>
+
+<h1 class="mt-5">min height</h1>
+<div class=" h-[500px] bg-green-300">
+    <div class="min-h-full bg-teal-200">full</div>
+</div>
+
+
+<h1>max height</h1>
+<div class="h-[400px] bg-slate-200 mb-10">
+    <div class="m-20 bg-rose-300 h-[1000px] max-h-full"></div>
+</div>
+
+<h1>full w-screen</h1>
+<div class="bg-pink-300 mb-4 h-screen">hello</div>
+
+<div class="bg-green-400 p-5 w-auto"></div>
+
+<div class="h-screen w-screen bg-gradient-to-br from-indigo-500 to-purple-700 flex items-center justify-center">
+  <h1 class="text-white text-5xl font-bold">Full Screen Power ⚔️</h1>
+</div>
+
+<div class="bg-pink-200 h-auto w-auto p-4 rounded-lg shadow-md">
+  <p>This box grows as I add more sushi 🍣🍣🍣🍣🍣🍣🍣</p>
+</div>
+
+
+<div class=" h-screen w-screen bg-gradient-to-br 
+from-pink-300 to-purple-300 flex items-center
+  justify-center">
+<h1 class="text-9xl font-bold font-serif hover:underline decoration-4 decoration-indigo-400 underline-offset-8">Weclome</h1> 
+<button class="text-8xl bg-indigo-400 text-white mt-4 p-6 font-mono hover:bg-indigo-600 rounded-lg">code</button>
+</div>
+
+
+
+
+
+
+
 
 
 
