--- a/text1.html
+++ b/text1.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <button title="intro" class="red-button">heyyyyy</button>
+    <button title="intro" class="red-button" onclick="
+    alert('huh')
+    ">heyyyyy</button>
     <p>text is here, look at it</p>
 
 
