--- a/text1.html
+++ b/text1.html
@@ -12,11 +12,11 @@
     alert('huh')
     ">heyyyyy</button>
     <p>text is here, look at it</p>
-
-
-
-
-
+<button class="click">Click</button>
+<button class="name1">Humu</button> <button class="name2">Omnis</button>
+<p>Hello World! <span class="sp">Today, I went to the grocery to buy some eggs and vegetables</span></p>
+<button class="cart">Add to Cart</button>
+<button class="buy">Buy now</button>
 
 
 
