--- a/rock-paper-scissors-modified.html
+++ b/rock-paper-scissors-modified.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock-paper-scissors-modified</title>
@@ -14,6 +15,7 @@
 <button onclick="playGame('rock')">Rock</button>
 <button onclick="playGame('paper')">Paper</button>
 <button onclick="playGame('scissors')">Scissors</button>
+<button onclick="reset()">Reset</button>
 
 
 
