--- a/rock-paper-scissors-modified.html
+++ b/rock-paper-scissors-modified.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="rock-paper-scissors-modified.css">
 
+    <style>
+        
+    </style>
+
 </head>
 <body>
     
