--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -49,11 +49,11 @@
           <div class="cart-text">Cart</div>
         </a>
       </div>
-    </div>
+    </div> 
     
     <div class="main">
-      <div class="products-grid">
-        <div class="product-container">
+      <div class="products-grid js-products-grid">
+        <!-- <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
               src="images/products/athletic-cotton-socks-6-pairs.jpg">
@@ -198,8 +198,11 @@
           <button class="add-to-cart-button button-primary">
             Add to Cart
           </button>
-        </div>
+        </div> -->
       </div>
     </div>
+
+    <script src="scripts.js"></script>
+
   </body>
 </html>
