--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -201,7 +201,8 @@
         </div> -->
       </div>
     </div>
-
+    <script src="data/cart.js"></script>
+    <script src="data/products.js"></script>
     <script src="scripts.js"></script>
 
   </body>
