--- a/javascript-amazon-project-main/checkout.html
+++ b/javascript-amazon-project-main/checkout.html
@@ -231,6 +231,7 @@
         </div>
       </div>
     </div>
+    <!-- <script src="https://unpkg.com/dayjs@1.11.10/dayjs.min.js"></script> -->
     <script type="module" src="checkout.js"></script>
   </body>
 </html>
