--- a/doc-obj-model.html
+++ b/doc-obj-model.html
@@ -6,8 +6,33 @@
     <title>doc-obj-model</title>
 </head>
 <body>
-    
-<h1 id="welcome-msg">welcome </h1>
+<h1 id="my-heading">Food R Us</h1>
+
+<div class="fruits">apple</div>
+
+<div class="fruits">watermelon</div>
+
+<div class="fruits">dragon fruit</div>
+
+
+<h4>Root vegetables</h4>
+<ul>
+    <li>Beets</li>
+    <li>Carrots</li>
+    <li>Potatotes</li>
+</ul>
+
+
+<h4>Non Root vegetables</h4>
+<ul>
+    <li>Broccoli</li>
+    <li>Celery</li>
+    <li>Onions</li>
+</ul>
+
+
+
+<h1 id="welcome-msg">Welcome </h1>
 
 
 
